Init Swagger documentation in full functionality
