# internal/features/tasks/transport/http/delete_task.go
@@ -8,6 +8,18 @@ import (
 	core_http_utils "github.com/PopovMarko/todo_app/internal/core/transport/http/utils"
 )
 
+// DeleteTask  	godoc
+// @Summary 	Delete task
+// @Description Delete task by task ID
+// @Tags 		Tasks
+// @Accept		json
+// @Produce 	json
+// @Param		id path int true "Task ID"
+// @Success		204 "Task deleted successfully"
+// @Failure		404 {object} core_http_response.ErrorResponse "Task not found"
+// @Failure		400 {object} core_http_response.ErrorResponse "Bad request"
+// @Failure		500 {object} core_http_response.ErrorResponse "Internal server error"
+// @Router		/tasks/{id} [delete]
 func (h *TasksHTTPHandler) DeleteTask(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 	logger := core_logger.LogFromContext(ctx)
