# internal/features/users/transport/http/get_users.go
@@ -11,6 +11,18 @@ import (
 
 type GetUsersResponse []UserDTOResponse
 
+// GetUser godoc
+// @Summary 		Get users
+// @Description 	Get users with optional pagination(limit, offset)
+// @Tags 			Users
+// @Accept 			json
+// @Produce 		json
+// @Param 			limit query int false "Page size"
+// @Param			offset query int false "Shift size"
+// @Success 		200 {object} GetUsersResponse "Get users successfully"
+// @Failure			400 {object} core_http_response.ErrorResponse "Bad request"
+// @Failure 		500 {object} core_http_response.ErrorResponse "Internal server error"
+// @Router 			/users [get]
 func (h *UserHTTPHandler) GetUsers(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 	logger := core_logger.LogFromContext(ctx)
